test/errors/error2.sp
%set_expr contains an undefined sort.
sorts
#s=#s1-{a,b,c}. 
predicates
rules
